--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -418,7 +418,7 @@ To assess the performance of a given nanoporous material for separation in the l
     \caption{For 8\,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair plots of $\log\e{10}(s\e{0})$, $\log\e{10}(K\ex{Xe})$ and $\log\e{10}(K\ex{Kr})$ (the Henry constants are in~\si{\milli\mol\per\gram\per\pascal}) in the off-diagonal subplots (note that the y-axis is displayed on the right side) and the distribution of each quantity are on the diagonal (note that the y-axis displayed on the right side corresponds to the count and the x-axis is correctly labeled below each subplot).}\label{fgr:histo_K}
   \end{figure}
   
-The distribution of thermodynamic properties of materials with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$) is depicted in Figure~\ref{fgr:histo_K}. It is important to note that the plots focus on selectivity values above 1, as these are the materials of interest for separation. This selection eliminates certain outliers with specific geometries or binding sites (without significantly altering the overall conclusions). The plots reveal that while the logarithm of Xe Henry constant $K\ex{Xe}$ exhibits a weak correlation with the logarithm of selectivity $s\e{0}$, this correlation is stronger for highly selective materials. Therefore, in a multistep screening study aimed at identifying the most selective materials, it could be possible to utilize as a ``first filter'' criterion based purely on Xe adsorption, by excluding materials below a certain threshold (e.g., the materials with $s_0\ge30$ can be found in the subset with $K\ex{Xe}\ge2.7\,10^{-1}$~\si{\milli\mol\per\gram\per\pascal}). On the other hand, the correlation between $K\ex{Kr}$ and $s\e{0}$ is relatively weaker. These results suggest that a high affinity with xenon measured by the Henry constant is a determining factor of high selectivity for the most selective materials.  
+The distribution of thermodynamic properties of materials with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$) is depicted in Figure~\ref{fgr:histo_K}. It is important to note that the plots focus on selectivity values above 1, as these are the materials of interest for separation. This selection eliminates certain outliers with specific geometries or binding sites (without significantly altering the overall conclusions). The plots reveal that while the logarithm of Xe Henry constant $K\ex{Xe}$ exhibits a weak correlation with the logarithm of selectivity $s\e{0}$, this correlation is stronger for highly selective materials. Therefore, in a multistep screening study aimed at identifying the most selective materials, it could be possible to utilize as a ``first filter'' criterion based purely on Xe adsorption, by excluding materials below a certain threshold (e.g., the materials with $s_0\ge30$ can be found in the subset with $K\ex{Xe}\ge2.7\cdot10^{-1}$~\si{\milli\mol\per\gram\per\pascal}). On the other hand, the correlation between $K\ex{Kr}$ and $s\e{0}$ is relatively weaker. These results suggest that a high affinity with xenon measured by the Henry constant is a determining factor of high selectivity for the most selective materials.  
 
 \begin{figure}[h]
   \centering
@@ -426,7 +426,7 @@ The distribution of thermodynamic properties of materials with favorable thermod
     \caption{For 8\,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair plots of $\log(s\e{0})$, $\Delta\e{exc}H\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$ and $\Delta\e{ads}H\ex{Kr}\e{0}$ (the enthalpies are in~\si{\kilo\joule\per\mol}) in the off-diagonal subplots and the distribution of each quantity is on the diagonal.}\label{fgr:histo_H}
   \end{figure}
 
-In terms of Henry constants, a diverse range of behaviors are observed, with $K\ex{Xe}$ ranging from $2.6\,10^{-7}$ to $7.9\,10^{-1}$~\si{\milli\mole\per\gram\per\pascal}, and $K\ex{Kr}$ ranging from $1.3\,10^{-7}$ to $5.1\,10^{-3}$~\si{\milli\mole\per\gram\per\pascal}.  Additionally, there is a statistical trend indicating that a high affinity for xenon typically translates into a relatively high affinity for krypton. This general trend is observed for noble gases, where the adsorption sites lack strong specificity. To delve deeper into the thermodynamic aspects underlying this wide diversity in behavior, the enthalpies involved were plotted in Figure~\ref{fgr:histo_H}.
+In terms of Henry constants, a diverse range of behaviors are observed, with $K\ex{Xe}$ ranging from $2.6\cdot10^{-7}$ to $7.9\cdot10^{-1}$~\si{\milli\mole\per\gram\per\pascal}, and $K\ex{Kr}$ ranging from $1.3\cdot10^{-7}$ to $5.1\cdot10^{-3}$~\si{\milli\mole\per\gram\per\pascal}.  Additionally, there is a statistical trend indicating that a high affinity for xenon typically translates into a relatively high affinity for krypton. This general trend is observed for noble gases, where the adsorption sites lack strong specificity. To delve deeper into the thermodynamic aspects underlying this wide diversity in behavior, the enthalpies involved were plotted in Figure~\ref{fgr:histo_H}.
 
 The low-loading adsorption enthalpy of xenon ($\Delta\e{ads}H\ex{Xe}\e{0}$) is strongly correlated with that of krypton ($\Delta\e{ads}H\ex{Kr}\e{0}$), which aligns with the correlation observed between their respective Henry constants. This suggests the involvement of a rather generic physisorption mechanism in the majority of materials, where the host--adsorbate affinities are primarily determined by the enthalpy. The selectivity of Xe/Kr selectivity is not driven significantly by the xenon or krypton adsorption enthalpy alone (both exhibit weak correlation with selectivity), but rather by their difference, $\Delta\e{exc}H\e{0}$, which shows a strong correlation with $\log(s\e{0})$. This finding is further supported by the lack of correlation between selectivity and adsorption entropies (\emph{cf.} Figure~\ref{fgr:SI:HS_0_log}), indicating that the separation is predominantly enthalpic in nature, and any dispersion in the correlation between selectivity $\log(s\e{0})$ and $\Delta\e{exc}H\e{0}$ is influenced by entropy.
 
@@ -617,19 +617,19 @@ This section will examine the most selective materials identified at low pressur
     \hline
           CSD Refcode & Ref. &  $s\e{0}$ &  $K\ex{Xe}$ &  $K\ex{Kr}$ &  $\Delta\e{ads}H\ex{Xe}\e{0}$ &  $\Delta\e{ads}H\ex{Kr}\e{0}$  &  $s\e{1}$ &  $q\ex{Xe}\e{1}$ &  $q\ex{Kr}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ \\
     \hline
-        \texttt{VOKJIQ} & \cite{VOKJIQ}        &  $157$  &  $7.92\,10^{-1}$  &  $5.04\,10^{-3}$  &  $-53.9$  &  $-38.2$  &  $243$  &  $2.57$  &  $0.04$  &  $-61.1$  &  $-44.5$  \\
-        \texttt{KAXQIL} & \cite{KAXQIL}        &  $104$  &  $3.01\,10^{-2}$  &  $2.90\,10^{-4}$  &  $-44.6$  &  $-30.5$  &  $133$  &  $1.41$  &  $0.04$  &  $-41.5$  &  $-26.8$  \\
-        \texttt{JUFBIX} & \cite{JUFBIX}        &  $106$  &  $1.59\,10^{-2}$  &  $1.50\,10^{-4}$  &  $-45.6$  &  $-31.4$  &  $115$  &  $0.80$  &  $0.03$  &  $-45.7$  &  $-31.3$  \\
-        \texttt{FALQOA} & \cite{FALQOA}        &  $162$  &  $2.23\,10^{-2}$  &  $1.38\,10^{-4}$  &  $-47.3$  &  $-32.0$  &  $171$  &  $0.68$  &  $0.02$  &  $-48.6$  &  $-33.1$  \\
-        \texttt{GOMREG} & \cite{GOMREG_GOMRAC} &  $114$  &  $9.16\,10^{-2}$  &  $8.03\,10^{-4}$  &  $-44.7$  &  $-31.1$  &  $ 74$  &  $2.59$  &  $0.14$  &  $-47.5$  &  $-33.8$  \\
-        \texttt{JAVTAC} & \cite{JAVTAC}        &  $117$  &  $1.24\,10^{-1}$  &  $1.06\,10^{-3}$  &  $-47.7$  &  $-33.5$  &  $ 67$  &  $1.50$  &  $0.09$  &  $-48.5$  &  $-34.9$  \\
-        \texttt{GOMRAC} & \cite{GOMREG_GOMRAC} &  $124$  &  $1.17\,10^{-1}$  &  $9.45\,10^{-4}$  &  $-45.6$  &  $-31.8$  &  $ 47$  &  $2.51$  &  $0.21$  &  $-47.3$  &  $-34.8$  \\
-        \texttt{MISQIQ} & \cite{MISQIQ}        &  $139$  &  $6.87\,10^{-1}$  &  $4.94\,10^{-3}$  &  $-51.9$  &  $-37.4$  &  $ 37$  &  $2.30$  &  $0.25$  &  $-45.6$  &  $-32.8$  \\
-        \texttt{BAEDTA01} & \cite{BAEDTA01}      &  $154$  &  $1.39\,10^{-2}$  &  $9.04\,10^{-5}$  &  $-47.7$  &  $-31.7$  &  $ 38$  &  $1.05$  &  $  11$  &  $-34.0$  &  $-23.1$  \\
-        \texttt{VIWMOF} & \cite{VIWMOF}        &  $ 81$  &  $7.87\,10^{-3}$  &  $9.70\,10^{-5}$  &  $-46.3$  &  $-30.1$  &  $ 13$  &  $2.99$  &  $0.90$  &  $-26.0$  &  $-17.8$  \\
-        \texttt{LUDLAZ} & \cite{LUDLAZ}        &  $166$  &  $9.04\,10^{-2}$  &  $5.46\,10^{-4}$  &  $-45.4$  &  $-30.9$  &  $ 16$  &  $1.59$  &  $0.39$  &  $-38.3$  &  $-28.3$  \\
-        \texttt{WOJJOV} & \cite{WOJJOV}        &  $146$  &  $4.19\,10^{-2}$  &  $2.86\,10^{-4}$  &  $-46.4$  &  $-30.7$  &  $ 14$  &  $2.82$  &  $0.81$  &  $-33.0$  &  $-24.4$  \\
-        \texttt{VAPBIZ} & \cite{VAPBIZ}        &  $147$  &  $3.54\,10^{-2}$  &  $2.41\,10^{-4}$  &  $-46.4$  &  $-30.5$  &  $ 13$  &  $2.50$  &  $0.78$  &  $-34.1$  &  $-25.3$  \\
+        \texttt{VOKJIQ} & \cite{VOKJIQ}        &  $157$  &  $7.92\cdot10^{-1}$  &  $5.04\cdot10^{-3}$  &  $-53.9$  &  $-38.2$  &  $243$  &  $2.57$  &  $0.04$  &  $-61.1$  &  $-44.5$  \\
+        \texttt{KAXQIL} & \cite{KAXQIL}        &  $104$  &  $3.01\cdot10^{-2}$  &  $2.90\cdot10^{-4}$  &  $-44.6$  &  $-30.5$  &  $133$  &  $1.41$  &  $0.04$  &  $-41.5$  &  $-26.8$  \\
+        \texttt{JUFBIX} & \cite{JUFBIX}        &  $106$  &  $1.59\cdot10^{-2}$  &  $1.50\cdot10^{-4}$  &  $-45.6$  &  $-31.4$  &  $115$  &  $0.80$  &  $0.03$  &  $-45.7$  &  $-31.3$  \\
+        \texttt{FALQOA} & \cite{FALQOA}        &  $162$  &  $2.23\cdot10^{-2}$  &  $1.38\cdot10^{-4}$  &  $-47.3$  &  $-32.0$  &  $171$  &  $0.68$  &  $0.02$  &  $-48.6$  &  $-33.1$  \\
+        \texttt{GOMREG} & \cite{GOMREG_GOMRAC} &  $114$  &  $9.16\cdot10^{-2}$  &  $8.03\cdot10^{-4}$  &  $-44.7$  &  $-31.1$  &  $ 74$  &  $2.59$  &  $0.14$  &  $-47.5$  &  $-33.8$  \\
+        \texttt{JAVTAC} & \cite{JAVTAC}        &  $117$  &  $1.24\cdot10^{-1}$  &  $1.06\cdot10^{-3}$  &  $-47.7$  &  $-33.5$  &  $ 67$  &  $1.50$  &  $0.09$  &  $-48.5$  &  $-34.9$  \\
+        \texttt{GOMRAC} & \cite{GOMREG_GOMRAC} &  $124$  &  $1.17\cdot10^{-1}$  &  $9.45\cdot10^{-4}$  &  $-45.6$  &  $-31.8$  &  $ 47$  &  $2.51$  &  $0.21$  &  $-47.3$  &  $-34.8$  \\
+        \texttt{MISQIQ} & \cite{MISQIQ}        &  $139$  &  $6.87\cdot10^{-1}$  &  $4.94\cdot10^{-3}$  &  $-51.9$  &  $-37.4$  &  $ 37$  &  $2.30$  &  $0.25$  &  $-45.6$  &  $-32.8$  \\
+        \texttt{BAEDTA01} & \cite{BAEDTA01}      &  $154$  &  $1.39\cdot10^{-2}$  &  $9.04\cdot10^{-5}$  &  $-47.7$  &  $-31.7$  &  $ 38$  &  $1.05$  &  $  11$  &  $-34.0$  &  $-23.1$  \\
+        \texttt{VIWMOF} & \cite{VIWMOF}        &  $ 81$  &  $7.87\cdot10^{-3}$  &  $9.70\cdot10^{-5}$  &  $-46.3$  &  $-30.1$  &  $ 13$  &  $2.99$  &  $0.90$  &  $-26.0$  &  $-17.8$  \\
+        \texttt{LUDLAZ} & \cite{LUDLAZ}        &  $166$  &  $9.04\cdot10^{-2}$  &  $5.46\cdot10^{-4}$  &  $-45.4$  &  $-30.9$  &  $ 16$  &  $1.59$  &  $0.39$  &  $-38.3$  &  $-28.3$  \\
+        \texttt{WOJJOV} & \cite{WOJJOV}        &  $146$  &  $4.19\cdot10^{-2}$  &  $2.86\cdot10^{-4}$  &  $-46.4$  &  $-30.7$  &  $ 14$  &  $2.82$  &  $0.81$  &  $-33.0$  &  $-24.4$  \\
+        \texttt{VAPBIZ} & \cite{VAPBIZ}        &  $147$  &  $3.54\cdot10^{-2}$  &  $2.41\cdot10^{-4}$  &  $-46.4$  &  $-30.5$  &  $ 13$  &  $2.50$  &  $0.78$  &  $-34.1$  &  $-25.3$  \\
     \hline
     \end{tabular}
     \caption{\ Thermodynamic quantities associated for a few archetypal structures. Henry constant $K\ex{Xe}$, $K\ex{Kr}$ are in \si{\milli\mol\per\gram\per\pascal}, loadings $q\ex{Xe}\e{1}$ and $q\ex{Kr}\e{1}$ are in \si{\milli\mol\per\gram}, enthalpies $\Delta\e{ads}H\ex{Xe}\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{0}$, $\Delta\e{ads}H\ex{Xe}\e{1}$ and $\Delta\e{ads}H\ex{Xe}\e{1}$ are in \si{\kilo\joule\per\mol}}\label{tbl:thermo}
@@ -701,7 +701,7 @@ In the case of \texttt{MISQIQ}, the pure-component Xe isotherm depicted in Figur
   \centering
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean.jpg}\hfill
     \includegraphics[width=0.48\textwidth]{figures/2-thermo/MISQIQ_clean_isotherm_xenon_krypton_298K.jpg}
-    \caption{Representation of a chiral open-framework fluoroaluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] denoted AlPO-JU89 (referenced \texttt{MISQIQ} in the Cambridge structural database), which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\autocite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 2-site Langmuir model (equation~\ref{eq:langmuir_2}) for both xenon and krypton at \SI{298}{\kelvin} on the right side.}\label{fgr:MISQIQ}
+    \caption{\texttt{MISQIQ}: Representation of a chiral open-framework fluoro-aluminophosphate [C$_4$N$_3$H$_{16}$]$\cdot$[Al$_6$P$_3$O$_{12}$F$_6$(OH)$_6$] also denoted AlPO-JU89, which has been loaded with xenon and krypton in a GCMC simulation, on the left side.\autocite{MISQIQ} Color code: Al in silver, P in orange, O in red, H in white and F in green for the framework; Xe in transparent pink and Kr in cyan for the adsorbates. The pure-component isotherms fitted with a 2-site Langmuir model (equation~\ref{eq:langmuir_2}) for both xenon and krypton at \SI{298}{\kelvin} on the right side.}\label{fgr:MISQIQ}
   \end{figure*}
 
 The materials \texttt{BAEDTA01}, \texttt{VIWMOF}, \texttt{LUDLAZ}, \texttt{WOJJOV}, and \texttt{VAPBIZ} fall into the category of having more than one available adsorption site, resulting in a significant drop in selectivity from low to ambient pressure. The pure-component isotherms and the representation of the materials loaded in xenon and krypton molecules (presented in the supporting information of the Ref.~\cite{Ren_2021} Figures~S19-23) confirm the existence of at least two distinct adsorption sites in each material. The preferential filling of the most selective sites (i.e., the most favorable for Xe) occurs at low loading, while the less selective sites are populated as the pressure increases. Consequently, a net decrease in selectivity at ambient pressure is observed for these materials. The existence of different types of adsorption sites and their impact on Xe/Kr selectivity (at non-zero pressure) suggests the inclusion of this factor in the screening of pure-component isotherms without the need for explicit multi-component GCMC simulations.
