--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -160,13 +160,13 @@ A transition from the ballistic regime to the pseudo-diffusional regime (where t
 \caption{ Plots of the MSD at the last two timescales considered in Figure~\ref{fgr:MSD_init}. On the left, the timescale between \SI{0.01}{\ns} and \SI{0.4}{\ns} is considered. The MSD is fitted using a power function with the same previously determined exponent, and a linear fit is provided to demonstrate its incompatibility with the diffusion equation. On the right, a similar approach is employed for the timescale between \SI{0.4}{\ns} and \SI{9}{\ns}. }\label{fgr:MSD_linear_init}
 \end{figure}
 
-By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.24\,10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
+By fitting a linear relation using the right plot of Figure~\ref{fgr:MSD_linear_init} and deducing the diffusion coefficient, an underestimated value of the diffusion coefficient of $2.2\cdot10^{-8}$~\si{\square\cm\per\s} is obtained --- it is an underestimation due to the concave nature of the MSD, which reduces the slope in the fitting process. However, this value is already a good estimation of the diffusion coefficient, considering the relatively high value of the exponent $\alpha=0.7$ in the fitting equation $K_\alpha\tau^\alpha$.
 
-To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.13\,10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.37\,10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics are more straightforward than for more complex pore architectures that will be tackled later in this chapter.
+To account for the randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), it is necessary to measure the effect of running different MD simulations of the value of the diffusion coefficients. The uncertainty across various MD simulations with different initial positions determined by different random seeds needs to be quantified. In RASPA2, the random seed is equal to the UNIX time upon launching the MD simulation, ensuring that each of the $10$ different MD simulations is assigned a different random seed while using the exact same parameters, as previously mentioned. The diffusion coefficient values were averaged over these simulations, resulting in an average diffusion coefficient of $2.1\cdot10^{-8}$~\si{\square\cm\per\s} and a standard deviation of $0.4\cdot10^{-8}$~\si{\square\cm\per\s}, representing approximately {17\%} of the average value. The uncertainty in the diffusion coefficient is estimated to be around {17\%} for a relatively low coefficient of around $10^{-8}$ cm²/s, with lower uncertainty expected for less obstructive materials. It is worth mentioning that in the particular case of \texttt{KAXQIL}, where all pores are symmetrically equivalent, the dynamics are more straightforward than for more complex pore architectures that will be tackled later in this chapter.
 
-Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} and {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\,10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
+Increased confidence in the method led to the exploration of higher timescales beyond the reach the previous MD simulation, as the occurrence of the diffusion regime was observed at the \SI{10}{\ns} timescale. An MD simulation is consequently performed with a 1~\si{\fs}-timestep and 2.5 billion steps on the same \texttt{KAXQIL} structure. With this longer simulation, much larger timescales could be probed such as the one between {2} and {47}~\si{\ns}, which was confirmed as a linear diffusion regime in the MSD plot. A self-diffusion coefficient value of $1.7\cdot10^{-8}$~\si{\square\cm\per\s} was determined for xenon. This value is slightly lower than the one determined in the yet non-linear regime ($\alpha=0.7$) from the previous approach.
 
-This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the time step value to 5~\si{\fs} with 5 times fewer MD steps (500 million), hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of $1.1\,10^{-8}$~\si{\square\cm\per\s}, whose order of magnitude is consistent with the previously reported approaches. For diffusion coefficient calculations, the primary objective remains an assessment of the order of magnitude of the values. Consequently, faster and less accurate methods are preferred in a screening approach.
+This previous simulation can be considered as the most accurate one, but it is not scalable on an entire database of thousands of structures since it requires 5--6 days to run all the MD steps. To speed up the process, we propose an increase of the time step value to 5~\si{\fs} with 5 times fewer MD steps (500 million), hence reducing the time required to the order of a day. This simulation presents a linear regime in the {2}--{47}~\si{\ns} timescale with a diffusion coefficient value of $3.0\cdot10^{-8}$~\si{\square\cm\per\s}, whose order of magnitude is consistent with the previously reported approaches. For diffusion coefficient calculations, the primary objective remains an assessment of the order of magnitude of the values. Consequently, faster and less accurate methods are preferred in a screening approach.
 
 \begin{figure}[ht]
   \centering
@@ -191,7 +191,7 @@ This approach focuses exclusively on the linear relations between the MSD and ti
 
 In this section, different relationships between the diffusion coefficient and simple geometrical descriptors will be presented. A forcefield-dependent definition of radii was chosen to ensure better correlation with the results of the MD simulation that used the UFF forcefield. The geometrical descriptors were calculated using Zeo++ and these radii to determine the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area, and the pore volume, as explained in Chapter 2. The use of UFF-based radii for the PLD was further justified by the original paper~\cite{Hung_2021}, which demonstrated a stronger correlation between the PLD and the diffusion constant. This correlation can also be observed in Figure~\ref{fgr:diff_pld}. The PLD calculated using the standard CCDC-defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in Chapter 1), there is a linear relationship between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD. This linear relationship is much noisier for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
-Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\,10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon to only undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
+Beyond the practical considerations regarding the calculation of geometrical descriptors, the PLD outlines the variation of diffusion performance within nanoporous materials. First, a linear relationship was observed, as previously highlighted, followed by a plateau. In the first zone, xenon is constrained by channels narrower than its kinetic radius. The diffusion coefficient rises with increasing channel width, and this positive correlation persists until the channel width exceeds approximately \SI{4.6}{\angstrom}. Beyond this threshold, the diffusion coefficient stabilizes around $3\cdot10^{-4}$\si{\square\cm\per\s}. Variations in this plateau region can only be attributed to other phenomena, such as tortuosity within nanopores or the chemical nature of the surface of nanopores. The diffusion coefficient value can be interpreted as the diffusion coefficient of a ``free'' xenon, which is less influenced by the surrounding pore surface. For PLD values exceeding \SI{5}{\angstrom}, the channels are sufficiently wide to allow for xenon to only undergo a minor slowdown. These findings are consistent with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, where a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin} was obtained \autocite{Wise1968}, aligning with the values observed centered around $3\cdot10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
 \begin{figure}[ht]
   \centering
@@ -210,7 +210,7 @@ If the channel dimensions (determined using Zeo++) are analyzed, partial informa
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\,10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\,10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\,10^{-8}$~\si{\square\cm\per\s} and $3\,10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
+For this reason, the distribution of diffusion coefficients that depend on the dimensionality of the channels within the framework was plotted in Figure~\ref{fgr:hist_diffusion_chandim}. The distribution for structures containing 1D structures is characterized by a much heavier tail in terms of low diffusion coefficients. Structures with 1D channels are more likely to have very low diffusion coefficients below $3\cdot10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels tend to have higher diffusion coefficients between $3\cdot10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s}, with very few structures having lower diffusion coefficients. The influence of channel dimensionality on diffusion coefficients is not as pronounced for bi- and unidimensional channels. In the case of bi- and unidimensional channels, structures with diffusion coefficients between $3\cdot10^{-8}$~\si{\square\cm\per\s} and $3\cdot10^{-6}$~\si{\square\cm\per\s} are more common, although less frequent in theory. Therefore, the dimensionality of the channels can influence the values of diffusion coefficients, although the relationship is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
@@ -220,7 +220,7 @@ For this reason, the distribution of diffusion coefficients that depend on the d
     \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
 \end{figure}
 
-Other geometric properties of the material, such as void fraction and surface area, can also influence diffusion. Low diffusion coefficients are typically observed in materials with small pore volumes below $0.6$, as shown in Figure~\ref{fgr:diff_sa_vf}. However, establishing a direct relationship between void fraction and diffusion coefficient is challenging. The only discernible relationship is that materials with void fractions higher than $0.6$ have diffusion coefficients exceeding $3\,10^{-6}$\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between PLD and void fraction, as larger PLD values are usually associated with higher void fractions. On the other hand, the accessible surface area for a probe of size $1.2$\si{\angstrom} does not appear to significantly influence the diffusion coefficient.
+Other geometric properties of the material, such as void fraction and surface area, can also influence diffusion. Low diffusion coefficients are typically observed in materials with small pore volumes below $0.6$, as shown in Figure~\ref{fgr:diff_sa_vf}. However, establishing a direct relationship between void fraction and diffusion coefficient is challenging. The only discernible relationship is that materials with void fractions higher than $0.6$ have diffusion coefficients exceeding $3\cdot10^{-6}$\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between PLD and void fraction, as larger PLD values are usually associated with higher void fractions. On the other hand, the accessible surface area for a probe of size $1.2$\si{\angstrom} does not appear to significantly influence the diffusion coefficient.
 
 \begin{figure}[ht]
   \centering
@@ -361,7 +361,7 @@ This noteworthy behavior of adsorption  \texttt{ADOGEH} can be explained by a sp
 
 Beyond the specific cases of \texttt{OQESAF} and \texttt{ADOGEH}, other nanoporous materials exhibit lower diffusion selectivity values. For instance, all the other materials listed in Table~\ref{table:diff} have diffusion selectivity values ranging between $0.2$ and $1.4$. The diffusion selectivity and xenon diffusion coefficient vary depending on the shape and size distribution of the porous channels. A weak correlation can be observed between the pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and diffusion performance for structures with an LCD\ex{UFF} value below \SI{6}{\angstrom} --- in these structures, pore size has a higher chance of influencing the transport properties. The correlation arises from the fact that a higher difference between LCD and PLD corresponds to a higher energy barrier for xenon to move within the channels, consequently decreasing the diffusion coefficient. However, when considering all available structures, the correlation disappears since the movement of diffusing xenon is less influenced by the pore walls in materials with higher LCD values. Moreover, for LCD values higher than \SI{7}{\angstrom}, the diffusion coefficient stabilizes around $10^{-5}$\si{\square\cm\per\s}, as depicted in Figure\ref{fgr:diff_H_lcd}. 
 
-Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of a xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\,10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
+Structures with high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}) exhibit a negative linear relationship between the LCD-PLD difference and xenon/krypton diffusion selectivity. This is due to the fact that highly selective materials have pore sizes close to that of a xenon atom, as explained in previous chapters. The effect on the Xe diffusion coefficient can also be extended to the Xe/Kr diffusion selectivity, as suggested by the noisy and stable values of krypton diffusion coefficients around $3\cdot10^{-5}$\si{\square\cm\per\s} (refer to Figure\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the inherent uncertainty in the MD methodology for diffusion coefficient calculation (estimated to be around {20\%} for the material \texttt{KAXQIL}), as well as other phenomena not accounted for by the simple arithmetic difference of two pore characteristics. The tortuosity of the channel, for instance, could contribute to the comprehension of diffusion coefficient values, but it is challenging to quantify in a tridimensional space. While various channel shapes will be qualitatively discussed in the following examples, the current work does not make an attempt to quantify these effects.
 
 \begin{figure}[ht]
   \centering
@@ -564,7 +564,7 @@ Calculating diffusion coefficients is an extremely time-consuming process, compl
       "Framework Mass (g/mol)" &   $M_f$ &   Molar mass of the framework material considered (in~\si{\g\per\mol}) \\
       "Framework Density (kg/m\textasciicircum{}3)" &   $\rho_f$ &   Mass density of the framework material considered (in~\si{\kg\per\cubic\m})  \\
       "ASA\_m2/cm3\_1.2" &   SA &   Surface area accessible to a \SI{1.2}{\angstrom} radius probe (in \si{\square\m\per\cubic\cm})  \\
-      "PO\_VF\_2.0" &  VF $\tfrac{V\e{pore}}{V\e{tot}}$ &  The void fraction or the ratio of the pore volume occupied by a \SI{2}{\angstrom} radius probe over the total material volume  \\
+      "PO\_VF\_2.0" &  VF $= \tfrac{V\e{pore}}{V\e{tot}}$ &  The void fraction or the ratio of the pore volume occupied by a \SI{2}{\angstrom} radius probe over the total material volume  \\
       "D\_f\_vdw\_uff298" &   PLD or $D_f$  &   Pore limiting diameter of the largest free sphere diameter calculated using the UFF dependent definition (in \si{\angstrom}) \\
       "D\_if\_vdw\_uff298" &   LCD or $D_{if}$ &   The largest included free sphere diameter in a free diffusion path calculated using the UFF dependent definition (in \si{\angstrom}) \\
       "Adsorption\_enthalpy" &   $\Delta\e{ads}H_0\ex{Xe}(\text{channel})$  &   Xenon adsorption enthalpy within a channel calculated using the barrier algorithm (in \si{\kJ\per\mol}) \\
