--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -136,7 +136,7 @@ Ce modèle de machine learning permet ainsi de remplacer la méthode coûteuse d
 
 D'autres méthodes basées sur la théorie des états de transition ont également été explorées pour calculer le coefficient de diffusion. Ces travaux ont notamment mené à la conception de l'algorithme utilisé pour calculer des barrières d'énergie. D'autres études sont encore nécessaires pour aller plus loin sur la description de la diffusion dans les canaux confinés des matériaux comme la prise en compte de la tortuosité, mais aussi la prise en compte des effets de diffusion collective où les équations de Fick et d'Eintein ne suffisent plus. 
 
-
+\clearpage
 \section*{Conclusion}
 
 Cette thèse étudie ainsi les grandeurs thermodynamiques et cinétiques de la séparation xénon/krypton dans les matériaux nanoporeux. On a pu caractériser de manière plus fine les caractéristiques des matériaux les plus sélectifs. En ajoutant des contraintes sur la diffusibilité, différents types de matériaux ont été identifiés. 
