--- a/remerciements.tex
+++ b/remerciements.tex
@@ -33,7 +33,7 @@ Dune \textsc{André}, qui nous a rejoints pour ma dernière année et avec qui j
 
 J'aimerais également remercier les postdoctorants avec qui j'ai pu longuement échanger lors des pauses déjeuner et café :
 Clément \textsc{Wespiser}, pour le verre que nous a payé à ton pot de départ avant que tu ne rejoignes le CEA.
-Ambroise \textsc{De Izarra}, pour nos discussions sur RASPA2. Bravo pour tes articles, ce n'était pas évident de coder dans RASPA2 !
+Ambroise \textsc{De Izarra}, pour nos discussions sur RASPA. Bravo pour tes articles, ce n'était pas évident de coder dans RASPA !
 Luca \textsc{Brugnoli}, pour partager ta passion pour les livres et les films de science-fiction. 
 Arthur \textsc{Hardiagon}, pour l'ail des ours que tu m'as ramené de chez toi (le pesto était excellent) et pour les concerts brésiliens de ta fanfare que tu nous proposes à chaque fois (j'ai adoré).
 
@@ -109,7 +109,7 @@ Dune \textsc{André}, who joined us for my final year, and whom I would have lik
 
 I would also like to thank the postdoctoral researchers with whom I had long and interesting discussions during lunch and coffee breaks:
 Clément \textsc{Wespiser}, for the drinks and dinner we had before you joined CEA.
-Ambroise \textsc{De Izarra}, for our discussions on RASPA2 (congratulations on your papers; coding in RASPA2 was not easy).
+Ambroise \textsc{De Izarra}, for our discussions on RASPA (congratulations on your papers; coding on top of RASPA was not easy).
 Luca \textsc{Brugnoli}, for sharing your passion for science fiction books and films.
 Arthur \textsc{Hardiagon}, for the wild garlic you brought from your home (the pesto was excellent) and the Brazilian concerts of your brass band (absolutely loved it). 
 
@@ -124,11 +124,8 @@ Siwar \textsc{Chibani}, for our discussions on the intricacies of an academic ca
 Lastly, I would like to express my deepest gratitude to the one I love, Dabeen Oh, for her unwavering support. You have always made efforts to take an interest in what I do, even though science is not your strong suit. Thank you very much for taking the time to understand, read, review, and correct my thesis. It is a true testament of your love, and I am immensely grateful.
 
 \endgroup
-
-\clearpage
-\mbox{}
-\thispagestyle{empty}
-\clearpage
+\newpage
+\cleardoublepage
 
 %\ifweb
 %
