--- a/0-intro.tex
+++ b/0-intro.tex
@@ -15,10 +15,11 @@ For the process to be viable, materials need to demonstrate improved performance
 
 The number of nanoporous materials is potentially unlimited; for the metal--organic frameworks (MOFs) alone, over 90,000 structures have been synthesized\autocite{Groom_2016} and 500,000 structures have been digitally constructed\autocite{Wilmer_2012,Boyd_2016,Colon_2017}. To efficiently handle this ever-increasing quantity of structures, researchers are developing screening strategies for identifying the best materials, while gaining chemical intuition about the characteristics favorable to a high separation performance. Some studies focus on a multistep screening strategy,\autocite{Wilmer_2012,Qiao_2016,Yang_2020} while others use machine learning algorithms to expedite their screening procedures.\autocite{Fernandez_2013,Simon_2015,Rosen_2021} Current screening strategies predominantly rely on computational tools that are better suited for single-structure studies rather than high-throughput screenings. Moreover, in the industrial process of PSA introduced earlier and other similar technologies, multiple variables are necessary to fully assess performance, including selectivity, working capacity, and the kinetics and thermodynamics associated with material regeneration (i.e., unloading the pores for another cycle).\autocite{Kumar_1994} This thesis aims to address both of these challenges by designing more efficient tools for high-throughput screening, encompassing not only the most commonly studied selectivity performance metric but also transport properties and other relevant factors. 
 
-
+\vspace{1cm}
 \begin{center}
     \pgfornament[width=6cm,color=CTsemi]{88}
 \end{center}
+\clearpage
 
 This manuscript begins with a literature review on the screening methodologies applied to various applications of nanoporous materials. The different techniques used in the research fields of these materials are explored to inspire the current work.\autocite{Ren_2022} For instance, the research focus will be oriented towards the screening of the separation process by breaking down the selectivity metric into thermodynamic quantities such as the enthalpy, the free energy and the entropy. This study, which is based on time-consuming calculations, revealed the effects of pressure, the thermodynamic nature of selectivity and certain structure--property relationships.\autocite{Ren_2021} To further improve selectivity screening for Xe/Kr separation, various simulation tools were introduced to evaluate the adsorption performance of a nanoporous material.\autocite{Ren_2023} This has opened up new possibilities for developing computationally cheaper and more accurate energy descriptors for the ML prediction of Xe/Kr selectivity at ambient pressure.\autocite{Ren_2023_ml} Through this work, faster and more accurate evaluation tools for Xe/Kr separation have been developed, potentially enabling the improvement of the physical description of the system. 
 
