--- a/main.tex
+++ b/main.tex
@@ -411,7 +411,8 @@
 \begin{document}
     \pagenumbering{roman}
     \maketitle
-
+    
+    \pagestyle{empty}
     \vspace*{6cm}
     \selectlanguage{french}
     \epigraph{\itshape L'effort est pénible, mais il est aussi précieux, plus pré­cieux encore que l'\oe{}uvre où il aboutit, parce que, grâce à lui, on a tiré de soi plus qu'il n'y avait, on s'est haussé au-dessus de soi-même.}{Henri \textsc{Bergson}\\  L'Énergie spirituelle, « La conscience et la vie »}
