--- a/main.tex
+++ b/main.tex
@@ -417,7 +417,8 @@
     \selectlanguage{french}
     \epigraph{\itshape L'effort est pénible, mais il est aussi précieux, plus pré­cieux encore que l'\oe{}uvre où il aboutit, parce que, grâce à lui, on a tiré de soi plus qu'il n'y avait, on s'est haussé au-dessus de soi-même.}{Henri \textsc{Bergson}\\  L'Énergie spirituelle, « La conscience et la vie »}
     \vspace{2cm}
-    \epigraph{\itshape L'instinct achevé est une faculté d'utiliser et même de construire des instruments organisés ; l'intelligence achevée est la faculté de fabriquer et d'employer des instruments inorganisés.}{Henri \textsc{Bergson}\\ L'évolution créatrice}
+    \selectlanguage{english}
+    \epigraph{\itshape The effort is toilsome, but also it is precious, more precious even than the work which it produces, because, thanks to it, one has drawn out from the self more than it had already, we are raised above ourselves.}{Henri \textsc{Bergson}\\  The spiritual energy, Life and Consciousness}
     \vfill
     \clearpage
 
