--- a/4-ml.tex
+++ b/4-ml.tex
@@ -305,7 +305,7 @@ By combining grid-based descriptors described in Chapter 3 (section~\ref{sct:gri
 
 This study aims at building an ML model to predict the Xe/Kr ambient-pressure selectivity faster than standard techniques. To obtain reference values (ground truth), I used the RASPA2 software\autocite{dubbeldam2016} to run GCMC calculations (introduced in section~\ref{sct:GCMC}) of 20–80 Xe/Kr mixtures at \SI{298}{\kelvin} and \SI{1}{\atm} on our cleaned database. The van der Waals interactions are described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal forcefield (UFF),\autocite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\autocite{Ryan_2010} The study only focuses on a given Xe/Kr composition usually obtained by cryogenic distillation of ambient air~\autocite{kerry2007industrial} as a first step towards predicting other mixtures at different physical conditions (\emph{e.g.} Xe/Kr mixtures out of nuclear off-gases). 
 
-To achieve this, a logarithmic transform of the selectivity will be considered instead of the raw value because the goal is rather to predict the order of magnitude of the selectivity values than to predict the higher values of selectivity --- an ML model that focuses its prediction on raw selectivity values can reach lower errors by simply focusing on the higher values than the lower ones. By focusing on the logarithmic transform of the selectivity, the different selectivity categories can be separated through the different orders of magnitude of the selectivity values. This approach distributes more evenly the efforts on all the whole spectrum of selectivity values. Moreover, this logarithmic transformation is effectively an exchange Gibbs free energy that was introduced in Chapter 2 and redefined in equation~\ref{eq:exc_gibbs}; it can therefore be easily compared with the energy descriptors I introduced in Chapter 3.
+To achieve this, a logarithmic transform of the selectivity will be considered instead of the raw value because the goal is rather to predict the order of magnitude of the selectivity values than to predict the higher values of selectivity --- an ML model that focuses its prediction on raw selectivity values can reach lower errors by simply focusing on the higher values than the lower ones. By focusing on the logarithmic transform of the selectivity, the different selectivity categories can be separated through the different orders of magnitude of the selectivity values. This approach distributes more evenly the efforts on the whole spectrum of selectivity values. Moreover, this logarithmic transformation is effectively an exchange Gibbs free energy that was introduced in Chapter 2 and redefined in equation~\ref{eq:exc_gibbs}; it can therefore be easily compared with the energy descriptors I introduced in Chapter 3.
 \begin{equation}\label{eq:exc_gibbs}
   \Delta\e{exc}G = -RT \ln\left(s\right)
 \end{equation}
