--- a/remerciements.tex
+++ b/remerciements.tex
@@ -16,7 +16,7 @@
 
 Je tiens tout d'abord à adresser mes plus sincères remerciements aux rapportrices de cette thèse, Sof{\'{i}}a \textsc{Calero} et Christelle \textsc{Miqueu}, pour avoir accepté de prendre le temps de lire, commenter et évaluer mon manuscrit de thèse. 
 % Leurs précieux commentaires et évaluations ont grandement enrichi mon travail. 
-J'adresse également mes remerciements à la présidente du jury, Anne \textsc{Boutin}, pour avoir accepté d'examiner mes travaux et de présider ma soutenance de thèse malgré ses nombreuses obligations en tant que directrice de département de l'ENS.
+J'adresse également mes remerciements à la présidente du jury, Anne \textsc{Boutin}, pour avoir accepté d'examiner mes travaux et de présider ma soutenance de thèse malgré ses nombreuses obligations.
 
 J'aimerais également remercier Johann \textsc{William} et Isabelle \textsc{Hablot} pour avoir accepté de participer à ma soutenance en tant que membres invités et représentants d'Orano. Je suis particulièrement reconnaissant envers Isabelle pour son implication dans l'encadrement de ma thèse, apportant toujours un regard bienveillant et pragmatique à mes travaux.
 
@@ -92,7 +92,7 @@ Enfin, je voudrais exprimer ma profonde gratitude envers celle que j'aime, Dabee
 
 First and foremost, I would like to express my gratitude to the referees of this thesis, Sof{\'{i}}a \textsc{Calero} and Christelle \textsc{Miqueu}, for accepting to take the time to read, comment on, and evaluate my thesis manuscript. 
 % Their valuable feedback and assessments have greatly enriched my work. 
-I also extend my sincere thanks to the chair of the jury, Anne \textsc{Boutin}, for accepting to review my PhD work and to preside over my thesis defense despite her numerous obligations as head of the Chemistry department at the ENS.
+I also extend my sincere thanks to the chair of the jury, Anne \textsc{Boutin}, for accepting to review my PhD work and to preside over my thesis defense despite her numerous obligations.
 
 I would also like to express my appreciation to Johann \textsc{William} and Isabelle \textsc{Hablot} for accepting to come as invited members and representatives of Orano. I am particularly grateful to Isabelle for her involvement in supervising my thesis, always providing a supportive and pragmatic perspective on my work.
 
