--- a/4-ml.tex
+++ b/4-ml.tex
@@ -169,7 +169,7 @@ Tree-based models are commonly used in classification problems where the tree cl
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.8\textwidth]{figures/4-ml/decision_tree.pdf}
-  \caption{Illustration of the decision tree and the region splitting performed by a CART\autocite{Breiman_2017} algorithm. Adapted from an illustration of the book ``Elements of Statistical Learning''~\cite{Hastie_2009}.}\label{fgr:tree}
+  \caption{Illustration of the decision tree and the region splitting performed by a CART\autocite{Breiman_2017} algorithm. Adapted from an illustration of the book ``Elements of Statistical Learning''~\cite{Hastie_2009}. \todo{change}}\label{fgr:tree}
 \end{figure}
 
 The CART\autocite{Breiman_2017} algorithm, developed by Breiman et al., is commonly presented as the archetype of a decision tree model. The algorithm follows a straightforward three-step process: (i) Examine every possible split on each feature $C_i$, (ii) select and use the best split according to a loss function (squared error or absolute error usually), and (iii) stop splitting a node when a stopping rule is satisfied (e.g.,\ minimum samples split).\autocite{Dension_1998} While it is possible to split the decision tree indefinitely, assigning each data point to its own region, this would inevitably lead to a textbook case of overfitting, rendering the model incapable of accurately predicting new data points. To prevent this, the decision tree incorporates a regularization parameter known as the minimum samples split, denoted as $n\e{min}$, which restricts further splitting if a node contains fewer samples than $n\e{min}$, hence treating the latter as terminal nodes. As decision trees are very prone to overfitting, an additional useful regularization parameter, maximum depth of the tree, can be used to halt the iterative tree growth. Finally, a process known as tree pruning can be employed to further regularize decision. Tree pruning simplifies the tree structure and outputs of the final model. A comprehensive discussion of tree pruning is beyond the scope of this work (see Ref.~\cite{Hastie_2009} for further details). The final tree $f\e{tree}$ can be expressed as a function of the different regions $R_1,\ldots,R_M$ created through the splitting process:
